--- a/_sass/_slideout.scss
+++ b/_sass/_slideout.scss
@@ -28,7 +28,7 @@ body {
   min-height: 100vh;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
-  z-index: 0;
+  z-index: 10001;
   display: none;
   h2 {
     text-align: center;
